--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,32 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Iberostar Royal Andalus
-  id: iberostar-royal-andalus
-  location: Chiclana de la Frontera, Cádiz
-  description: Un cuatro estrellas frente al mar en Novo Sancti Petri, con media pensión o todo incluido y extras
-  price: 91
-  price-description: por habitación por noche
-  saved: 27
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81665/67160b8f_0e0b_4d69_b0b2_1d212d09f800.jpg
-  link: https://es.secretescapes.com/iberostar-royal-andalus-chiclana-de-la-frontera-cadiz-es-esp/sale
-  sale-id: 93488
-  domestic: true
-
-- title: Vincci Selección Estrella del Mar
-  id: vincci-selección-estrella-del-mar
-  location: Marbella
-  description: Un lujoso cinco estrellas con spa en Marbella, elige entre dos opciones de alojamiento
-  price: 171
-  price-description: por habitación por noche
-  saved: 34
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9544/7aa05624_4417_4f73_ad58_f1e9e4826349.jpg
-  link: https://es.secretescapes.com/vincci-seleccion-estrella-del-mar-marbella-esp/sale
-  sale-id: 93854
-  domestic: true
-
 - title: Portals Hills Boutique Hotel
   id: portals-hills-boutique-hotel
   location: Portals Nous, Mallorca
@@ -35,23 +9,10 @@
   price: 195
   price-description: por suite por noche
   saved: 42
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
   link: https://es.secretescapes.com/portals-hills-boutique-hotel-mallorca-es-pa/sale
   sale-id: 93893
-  domestic: true
-
-- title: Bikini Island & Mountain Hotel Port de Soller
-  id: bikini-island-and-mountain-hotel-port-de-soller
-  location: Mallorca
-  description: Lujo chic y bohemio en el puerto de Sóller, con desayuno, un cóctel y extras
-  price: 113
-  price-description: por habitación por noche
-  saved: 26
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94158/022d0043_f1ba_4c26_a894_8e65a2e3e77c.jpg
-  link: https://es.secretescapes.com/bikini-island-and-mountain-hotel-port-de-soller-palma-de-mallorca-esp/sale
-  sale-id: 94158
   domestic: true
 
 - title: H10 Palacio Colomera
@@ -61,7 +22,7 @@
   price: 84
   price-description: por habitación por noche
   saved: 36
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
   link: https://es.secretescapes.com/h10-palacio-colomera-cordoba-es/sale
   sale-id: 93925
@@ -74,7 +35,7 @@
   price: 84
   price-description: por habitación por noche
   saved: 44
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/1bb36bfb_5f56_42cb_b8c6_d16e7460ed4c.jpg
   link: https://es.secretescapes.com/h10-casa-de-la-plata-sevilla-esp/sale
   sale-id: 94159
@@ -83,20 +44,6 @@
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Colonna Pevero
-  id: colonna-pevero
-  location: Cerdeña
-  description: Régimen de media pensión y lujo cinco estrellas en Cerdeña. Incluye extras
-  price: 218
-  price-description: por habitación por noche
-  saved: 64
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17278/e43ecae6_3668_4fec_bb58_361a8589f81c.jpg
-  link: https://es.secretescapes.com/colonna-pevero-cerdena-es/sale
-  sale-id: 93454
-  domestic: false
-
 - title: Château Monfort
   id: château-monfort
   location: Milán
@@ -104,7 +51,7 @@
   price: 172
   price-description: por habitación por noche
   saved: 45
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
   link: https://es.secretescapes.com/chateau-monfort-milan-espana/sale
   sale-id: 93672
@@ -117,7 +64,7 @@
   price: 143
   price-description: por habitación por noche
   saved: 37
-  expires: 2019/05/21
+  expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10585/0eaf785a_d63d_41b5_b063_24d161b46e66.jpg
   link: https://es.secretescapes.com/first-hotel-grims-grenka-oslo-es/sale
   sale-id: 93678
@@ -130,7 +77,7 @@
   price: 106
   price-description: por habitación por noche
   saved: 30
-  expires: 2019/05/21
+  expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94237/91c6b0f3_72c7_457d_a410_dda53c9135ee.jpg
   link: https://es.secretescapes.com/clarion-collection-savoy-oslo-esp/sale
   sale-id: 94237
@@ -151,7 +98,7 @@
 
 - title: Jupiter Albufeira Hotel - Family & Fun
   id: jupiter-albufeira-hotel---family-and-fun
-  location: Albufeira, Portugal
+  location: Albufeira, Algarve, Portugal
   description: Comodidad y diversión en familia en este cinco estrellas del Algarve. Régimen de todo incluido
   price: 138
   price-description: por habitación por noche
