--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -28,19 +28,6 @@
   sale-id: 93680
   domestic: true
 
-- title: Andaz London Liverpool Street
-  id: andaz-london-liverpool-street
-  location: The City, London
-  description: Modern style and five-star flair in the heart of London
-  price: 199
-  price-description: per room per night
-  saved: 22
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/58245/221587f5_f5d2_4956_9251_3d871cf1a7fe.jpg
-  link: https://www.secretescapes.com/andaz-london-liverpool-street-the-city-london/sale
-  sale-id: 93821
-  domestic: true
-
 - title: The Principal Edinburgh George Street
   id: the-principal-edinburgh-george-street
   location: Edinburgh, Scotland
@@ -57,7 +44,7 @@
 - title: Merchants Manor
   id: merchants-manor
   location: Falmouth, Cornwall
-  description: An adults-only Falmouth spa and foodie stay in a former merchant’s home
+  description: <div>An adults-only Falmouth spa and foodie stay in a former merchant’s home</div>
   price: 75
   price-description: per room per night
   saved: 41
@@ -123,9 +110,9 @@
   id: no.15-great-pulteney
   location: Bath, Somerset
   description: A fascinating, historic Bath stay at a curio-filled boutique
-  price: 149
+  price: 139
   price-description: per room per night
-  saved: 36
+  saved: 40
   expires: 2019/05/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/85243/338f1a6d_999f_4a12_bc91_62d14610c899.jpg
   link: https://www.secretescapes.com/no15-great-pulteney-bath-somerset/sale
@@ -136,9 +123,9 @@
   id: mottram-hall
   location: Mottram St. Andrew, Cheshire
   description: Kick back at an 18th-century Cheshire stay at a plush golf retreat
-  price: 159
+  price: 149
   price-description: per room per night
-  saved: 42
+  saved: 46
   expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80044/abc32c68_aa46_491d_97ec_0fcc17bd70fe.jpg
   link: https://www.secretescapes.com/mottram-hall-mottram-st-andrew-cheshire/sale
@@ -296,25 +283,26 @@
   id: h10-tindaya
   location: Gran Canaria, Spain
   description: Kick back at a Spanish-inspired resort on the shores of Sotavento Beach
-  price: 114
+  price: 100
   price-description: per room per night
-  saved: 38
+  saved: 45
   expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94244/a3b4e9a9_f8cd_4715_8433_312b981ea454.jpg
   link: https://www.secretescapes.com/h10-tindaya-gran-canaria-spain/sale
   sale-id: 94244
   domestic: false
 
-- title: Château Monfort
-  location: Milan, Italy
-  description: Feel plush at an opulent, five-star Milan hotel with fairy-tale interiors
-  price: 74
-  price-description: per person. Based on 2 people per room per night
-  saved: 45
+- title: Arbatax Park Resort & Spa - Suites del Mare
+  id: arbatax-park-resort-and-spa---suites-del-mare
+  location: Sardinia, Italy
+  description: A tranquil and inviting Sardinia suite stay near the sea
+  price: 376
+  price-description: per suite per night
+  saved: 63
   expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/c3de4ff8_18cb_4184_be33_3402998d7e1a.jpg
-  link: https://www.secretescapes.com/chateau-monfort-milan-italy123/sale
-  sale-id: 93672
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73726/960100d5_f0ce_4382_96ff_20b561324f90.jpg
+  link: https://www.secretescapes.com/arbatax-park-resort-and-spa-suites-del-mare-sardinia-italy/sale
+  sale-id: 94519
   domestic: false
 
 - title: H10 Palacio Colomera
@@ -327,4 +315,16 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
   link: https://www.secretescapes.com/h10-palacio-colomera-cordoba-spain/sale
   sale-id: 93925
+  domestic: false
+
+- title: Château Monfort
+  location: Milan, Italy
+  description: Feel plush at an opulent, five-star Milan hotel with fairy-tale interiors
+  price: 74
+  price-description: per person. Based on 2 people per room per night
+  saved: 45
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
+  link: https://www.secretescapes.com/chateau-monfort-milan-italy123/sale
+  sale-id: 93672
   domestic: false
